--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="application-name" content="Mini Mario"
-	<meta name="description" content="Mini Mario developed in JavaScript and Quintus">
+	<meta name="application-name" content="Zombies for President"
+	<meta name="description" content="Zombies for Presiden in JavaScript and Quintus">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
 	<meta name="author" content="Daniel Serrano Torres">
+	<link rel="stylesheet" href="css/base.css"/>
+	<!-- Production minified ~20k gzipped -->
+	<script src='http://cdn.html5quintus.com/v0.2.0/quintus-all.min.js'></script>
 </head>
 
 <body>
+<!--
 	<script src='libs/quintus.js'></script>
 	<script src='libs/quintus_2d.js'></script>
 	<script src='libs/quintus_anim.js'></script>
@@ -18,6 +22,7 @@
 	<script src='libs/quintus_tmx.js'></script>
 	<script src='libs/quintus_touch.js'></script>
 	<script src='libs/quintus_ui.js'></script>
+-->
 	<script src='core.js'></script>
 	<script src='entities.js'></script>
 	<script src='scenes.js'></script>
