de momento dejo el css fuera

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Zombies for Presiden in JavaScript and Quintus">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
 	<meta name="author" content="Daniel Serrano Torres">
-	<link rel="stylesheet" href="css/base.css"/>
+	<!-- <link rel="stylesheet" href="css/base.css"/> -->
 	<!-- Production minified ~20k gzipped -->
 	<script src='http://cdn.html5quintus.com/v0.2.0/quintus-all.min.js'></script>
 </head>
