--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta name="author" content="Daniel Serrano Torres, Iván Méndez Jiménez, Laura María de Castro Saturio">
 	<!-- <link rel="stylesheet" href="css/base.css"/> -->
 	<!-- Production minified ~20k gzipped -->
-	<script src='http://cdn.html5quintus.com/v0.2.0/quintus-all.min.js'></script>
+	<!--<script src='http://cdn.html5quintus.com/v0.2.0/quintus-all.min.js'></script>-->
 </head>
 
 <body>
-	<!--<script src='libs/quintus.js'></script>
+	<script src='libs/quintus.js'></script>
 	<script src='libs/quintus_2d.js'></script>
 	<script src='libs/quintus_anim.js'></script>
 	<script src='libs/quintus_audio.js'></script>
@@ -20,7 +20,7 @@
 	<script src='libs/quintus_sprites.js'></script>
 	<script src='libs/quintus_tmx.js'></script>
 	<script src='libs/quintus_touch.js'></script>
-	<script src='libs/quintus_ui.js'></script>-->
+	<script src='libs/quintus_ui.js'></script>
 
 	<script src='core.js'></script>
 	<script src='entities.js'></script>
