Updates y desarrollo del segundo nivel
Aparte de cambiar algo el primer nivel, he desarrollado un segundo nivel
con un nuevo tipo de enemigos que disparan hacia arriba, plataformas
móviles, el nexo de unión entre el primer y el segundo nivel y alguna
cosilla más... a ver que os parece...
Faltaría, fundamentalmente, pensar en como va a ser el enemigo final y
como nos puede atacar y como le podemos atacar nosotros.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="application-name" content="Zombies for President">
-	<meta name="description" content="Zombies for Presiden in JavaScript and Quintus">
+	<meta name="description" content="Zombies for President in JavaScript and Quintus">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
 	<meta name="author" content="Daniel Serrano Torres, Iván Méndez Jiménez, Laura María de Castro Saturio">
 	<!-- <link rel="stylesheet" href="css/base.css"/> -->
